--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,12 @@
 
 <body class="index">
 
- <header style="background-color: rgb(205, 236, 226);">
+    <header style="background-color: rgb(205, 236, 226);">
 
         <h1 class="special">My childhood memories</h1>
         <nav class="navbar">
             <ul>
+                <li><a href="http://127.0.0.1:5500/aboutme.html">About me</a></li>
                 <li><a href="http://127.0.0.1:5500/loginpage.html">Logout</a></li>
                 <li><a href="http://127.0.0.1:5500/contact.html">Contact</a></li>
                 <li><a href="https://sq.wikipedia.org/wiki/Xhem%C3%AB_Hasa">Read more</a></li>
@@ -22,7 +24,7 @@
                 </li>
             </ul>
         </nav>
-</header><br>
+    </header><br>
 
     <p> I always wish to return to my childhood village to find the pleasant memories of childhood, breathe the
         fresh air of the deep blue field and take a walk through the hills to admire the wildflowers of the
