--- a/loginpage.html
+++ b/loginpage.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>My favourite place</title>
-  </head>
 
-  <body>
-    <div class="background">
-      <div class="shape"></div>
-    </div>
-    <form action="homepage.html">
-      <h3>Login Here</h3>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Login page</title>
+</head>
 
-      <label for="username">Username</label>
-      <input type="text" placeholder="Email or Phone" id="username" />
+<body>
+  <div class="background">
+    <div class="shape"></div>
+  </div>
+  <form action="homepage.html">
+    <h3>Login Here</h3>
 
-      <label for="password">Password</label>
-      <input type="password" placeholder="Password" id="password" />
+    <label for="username">Username</label>
+    <input type="text" placeholder="Email or Phone" id="username" />
 
-      <button>Log In</button>
-    </form>
-  </body>
+    <label for="password">Password</label>
+    <input type="password" placeholder="Password" id="password" />
+
+    <button>Log In</button>
+  </form>
+</body>
+
 </html>
